Record archive-backed benchmark inputs